--- a/FrontEnd/src/app/components/bodega/lista-clientes/lista-clientes.component.html
+++ b/FrontEnd/src/app/components/bodega/lista-clientes/lista-clientes.component.html
@@ -1,1 +1,19 @@
-<p>lista-clientes works!</p>
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+	integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+	<link rel="stylesheet" href="/src//styles.css">
+-->
+<div class="container-fluid">
+	<h3 class="display-5 text-center my-4">Clientes</h3>
+	<div class="row">
+		<div class="col-12 col-md-4">
+			<h4 class="text-center my-3">Agrega un cliente nuevo</h4>
+			<app-agregar-cliente></app-agregar-cliente>
+		</div>
+		<div class="col-12 col-md-8">
+			<h4 class="text-center my-3">Lista de clientes</h4>
+			<app-clientes></app-clientes>
+		</div>
+	</div>
+</div>
