--- a/FrontEnd/src/app/components/menu/menu.component.html
+++ b/FrontEnd/src/app/components/menu/menu.component.html
@@ -22,7 +22,7 @@
 						<a class="nav-link" style="cursor: pointer;">Acceder como Sucursal</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" style="cursor: pointer;">Acceder como Usuario</a>
+						<a class="nav-link" (click)="accederAUsuario()" style="cursor: pointer;">Acceder como Usuario</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" (click)="accederABodega()" style="cursor: pointer;">Acceder a la Bodega</a>
