--- a/FrontEnd/src/app/components/menu/menu.component.html
+++ b/FrontEnd/src/app/components/menu/menu.component.html
@@ -19,7 +19,7 @@
 			<div class="offcanvas-body">
 				<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 					<li class="nav-item">
-						<a class="nav-link" style="cursor: pointer;">Acceder como Sucursal</a>
+						<a class="nav-link" (click)="accederATienda()" style="cursor: pointer;">Acceder como Sucursal</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" (click)="accederAUsuario()" style="cursor: pointer;">Acceder como Usuario</a>
