--- a/FrontEnd/src/app/components/tienda/menu-tienda/menu-tienda.component.html
+++ b/FrontEnd/src/app/components/tienda/menu-tienda/menu-tienda.component.html
@@ -6,9 +6,9 @@
 -->
 <nav class="navbar navbar-light bg-secondary">
 	<form class="container-fluid justify-content-evenly">
-		<button class="btn btn-lg btn-outline-warning me-3 my-2" type="button" routerLink="tienda">Lista de
+		<button class="btn btn-lg btn-outline-warning me-3 my-2" type="button" routerLink="articulos-en-bodega">Lista de
 			Artículos</button>
-		<button class="btn btn-lg btn-outline-warning me-3 my-2" type="button" routerLink="carrito">Carrito de
-			Compras</button>
+		<button class="btn btn-lg btn-outline-warning me-3 my-2" type="button" routerLink="pedir-a-bodega">Pedir a
+			Bodega</button>
 	</form>
 </nav>
