--- a/FrontEnd/src/app/components/tienda/tienda.component.html
+++ b/FrontEnd/src/app/components/tienda/tienda.component.html
@@ -4,11 +4,7 @@
 	integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 	<link rel="stylesheet" href="/src//styles.css">
 -->
-<nav class="navbar navbar-light bg-secondary">
-	<form class="container-fluid justify-content-evenly">
-		<button class="btn btn-lg btn-outline-warning me-3 my-2" type="button" routerLink="tienda">Lista de
-			Artículos</button>
-		<button class="btn btn-lg btn-outline-warning me-3 my-2" type="button" routerLink="carrito">Carrito de
-			Compras</button>
-	</form>
-</nav>
+<app-menu></app-menu>
+<h2 class="display-1 text-center fw-bold mt-5 py-3">Sucursal</h2>
+<app-menu-tienda></app-menu-tienda>
+<router-outlet></router-outlet>
