Agregado icono login lleva a tienda

--- a/FrontEnd/src/app/components/auth/auth.component.html
+++ b/FrontEnd/src/app/components/auth/auth.component.html
@@ -12,7 +12,7 @@
 					<h3>Iniciar Sesión</h3>
 					<div class="d-flex justify-content-end social_icon">
 						<span routerLink="bodega"><i class="fas fa-boxes"></i></span>
-						<span routerLink=""><i class="fas fa-store"></i></span>
+						<span routerLink="tienda"><i class="fas fa-store"></i></span>
 					</div>
 				</div>
 				<div class="card-body">
